<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">Bras\n南京大学</string>
    <string name="activity_name">Bras\n南京大学</string>
    <string name="dummy_content">南京大学\nBras客户端</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gif_airplane">过场动画</string>
    
    <!-- textview -->
    <string name="transition_content">正在飞行&#8230;</string>
    <string name="getting_content">正在获取&#8230;</string>
    <string name="other_online">已在另一地点登陆</string>

    <!-- button -->
    <string name="dummy_button">使用帮助</string>
    <string name="button_login">登陆</string>
    <string name="button_logout">下线</string>
    <string name="button_forcelogout">强制下线</string>
    <string name="button_callForceLogout">强制下线</string>

    <!-- img -->
    <string name="img_login">登陆</string>
    <string name="img_logout">下线</string>
    <string name="img_forcelogout">强制下线</string>
    <string name="img_transition">过场动画</string>
    <string name="img_bottom">背景图片（底部）</string>
    <string name="img_username">用户名</string>
    <string name="img_areaname">区域名称</string>
    <string name="img_logintime">登陆时间</string>
    <string name="img_ip">IP地址</string>
    <string name="img_payamount">账户余额</string>

    <!-- hint -->
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_force_logout">ForceLogoutActivity</string>
    <string name="title_activity_transition">TransitionActivity</string>
    
    <!-- msg -->
    <string name="msg_online_state">在线状态</string>
    <string name="msg_offline_state">不在线状态</string>
    <string name="msg_no_online">没有在线用户</string>
    <string name="msg_other_online">另一地点登陆</string>
    <string name="msg_already_online">已经在线</string>
    <string name="msg_login_success">登陆成功</string>
    <string name="msg_login_fail">登陆失败</string>
    <string name="msg_code_error">验证码错误</string>
    <string name="msg_username_error">用户名错误</string>
    <string name="msg_password_error">密码错误</string>
    <string name="msg_logout_success">下线成功</string>
    <string name="msg_logout_fail">下线失败</string>
    <string name="msg_already_offline">已经下线</string>
    <string name="msg_force_logout_success">强制下线成功</string>
    <string name="msg_force_logout_fail">强制下线失败</string>
    <string name="msg_check_network">请检查网络</string>

</resources>